--- a/src/components/hamburger-menu/HamburgerMenu.module.scss
+++ b/src/components/hamburger-menu/HamburgerMenu.module.scss
@@ -18,8 +18,8 @@
 
 .hamburger {
   position: absolute;
-  top: 5%;
-  left: 15px;
+  top: 40px;
+  left: 20px;
   display: none;
   cursor: pointer;
   background-color: transparent;
